# QABot

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/alembic/versions/: 001_initial.py
backend/app/: main.py
backend/app/api/: access.py  billing_helpers.py
backend/app/api/routers/: auth.py  billing.py  crawl.py  execution.py  healing.py  projects.py  runs.py  schedules.py  teams.py  tests.py  visual_regression.py
backend/app/core/: auth_deps.py  config.py  database.py  encryption.py  logging.py
backend/app/models/: __init__.py
backend/app/schemas/: __init__.py
backend/app/services/: access_service.py  ai_client.py  artifact_service.py  auth_service.py  auth_session_service.py  billing_service.py  crawler_service.py  failure_analysis_service.py  flow_inference_service.py  project_service.py  schedule_service.py  selector_healing_service.py  team_service.py  test_execution_service.py  test_generation_service.py  visual_regression_service.py
backend/app/tasks/: __init__.py  celery_app.py  crawl_tasks.py  schedule_tasks.py  test_tasks.py  visual_tasks.py
backend/tests/: conftest.py  test_api.py  test_auth_teams.py  test_billing.py  test_integration.py  test_live.py  test_parallel_execution.py  test_schedules.py  test_visual_regression.py
docs/: PROMOTION_PLAYBOOK.md
frontend/: package-lock.json  package.json
runner/: pyproject.toml
runner/playwright_utils/: crawler.py  executor.py  selector_builder.py  spec_generator.py  visual_capture.py  visual_diff.py
runner/tests/: test_executor.py  test_selector_builder.py  test_visual_diff.py
(+25 files in other folders)
